--- a/soccer-recruiting-email.html
+++ b/soccer-recruiting-email.html
@@ -559,6 +559,7 @@
         <div class="main-content">
                         <!-- Recent Updates & Highlight Video -->
             <div class="main-section">
+                <h2 class="main-section-title">💬 Recent Updates</h2>
                 <div class="updates">
                     <p style="margin: 0 0 15px 0; line-height: 1.6;">
                         Hi Coach X, Y, Z,
@@ -583,6 +584,7 @@
                     </p>
                 </div>
             </div>
+            
             
             <!-- Recent Achievements -->
             <div class="main-section">
