more space editing

--- a/soccer-recruiting-email.html
+++ b/soccer-recruiting-email.html
@@ -20,7 +20,7 @@
         }
         
         .email-container {
-            max-width: 800px;
+            max-width: 1000px;
             margin: 0 auto;
             background-color: #ffffff;
             box-shadow: 0 0 20px rgba(0,0,0,0.1);
@@ -157,7 +157,7 @@
         
         .video-thumbnail {
             width: 100%;
-            max-width: 400px;
+            max-width: 500px;
             height: 225px;
             background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
             background-image: url('https://img.youtube.com/vi/FgV7lB-YOjk/maxresdefault.jpg');
@@ -481,32 +481,56 @@
             <div class="sidebar-section">
                 <div class="sidebar-title">Player Details</div>
                 <div class="sidebar-content">
-                    <div class="contact-item">
-                        <strong>Club<br>Team :</strong> <a href="https://mustangsoccer.com/" target="_blank" style="color: white; text-decoration: none;">U17 Mustang ECNL</a>
-                        <img src="images/mustang-logo.png" alt="Mustang Soccer Club Logo" style="width: 20px; height: 20px; margin-left: 8px; vertical-align: middle;">
-                        <img src="images/ecnl-logo.png" alt="ECNL Logo" style="width: 20px; height: 20px; margin-left: 8px; vertical-align: middle;">
+                    <div class="contact-item" style="flex-direction: column; align-items: flex-start;">
+                        <div style="display: flex; align-items: center; margin-bottom: 4px;">
+                            <strong style="min-width: 80px;">Club Team:</strong>
+                            <a href="https://mustangsoccer.com/" target="_blank" style="color: white; text-decoration: none; margin-right: 8px;">U17 Mustang ECNL</a>
+                            <img src="images/mustang-logo.png" alt="Mustang Soccer Club Logo" style="width: 20px; height: 20px; margin-right: 4px;">
+                            <img src="images/ecnl-logo.png" alt="ECNL Logo" style="width: 20px; height: 20px;">
+                        </div>
                     </div>
-                    <div class="contact-item">
-                        <strong>School<br>Team :</strong> <a href="https://www.dlshs.org/" target="_blank" style="color: white; text-decoration: none;">De La Salle Varsity</a>
-                        <img src="images/dlshs-logo.png" alt="De La Salle Logo" style="width: 20px; height: 20px; margin-left: 8px; vertical-align: middle;">
+                    <div class="contact-item" style="flex-direction: column; align-items: flex-start;">
+                        <div style="display: flex; align-items: center; margin-bottom: 4px;">
+                            <strong style="min-width: 80px;">School Team:</strong>
+                            <a href="https://www.dlshs.org/" target="_blank" style="color: white; text-decoration: none; margin-right: 8px;">De La Salle Varsity</a>
+                            <img src="images/dlshs-logo.png" alt="De La Salle Logo" style="width: 20px; height: 20px;">
+                        </div>
                     </div>
-                    <div class="contact-item">
-                        <strong>Position :</strong> <span style="color: #f39c12;">Goalkeeper</span>
+                    <div class="contact-item" style="flex-direction: column; align-items: flex-start;">
+                        <div style="display: flex; align-items: center; margin-bottom: 4px;">
+                            <strong style="min-width: 80px;">Position:</strong>
+                            <span style="color: #f39c12;">Goalkeeper</span>
+                        </div>
                     </div>
-                    <div class="contact-item">
-                        <strong>Dominant Foot :</strong> Right
+                    <div class="contact-item" style="flex-direction: column; align-items: flex-start;">
+                        <div style="display: flex; align-items: center; margin-bottom: 4px;">
+                            <strong style="min-width: 80px;">Dominant Foot:</strong>
+                            <span>Right</span>
+                        </div>
                     </div>
-                    <div class="contact-item">
-                        <strong>Nationality :</strong> 🇨🇦 Canada / 🇺🇸 USA
+                    <div class="contact-item" style="flex-direction: column; align-items: flex-start;">
+                        <div style="display: flex; align-items: center; margin-bottom: 4px;">
+                            <strong style="min-width: 80px;">Nationality:</strong>
+                            <span>🇨🇦 Canada / 🇺🇸 USA</span>
+                        </div>
                     </div>
-                    <div class="contact-item">
-                        <strong>Jersey # :</strong> <span style="color: #e74c3c; font-weight: bold;">1</span>
+                    <div class="contact-item" style="flex-direction: column; align-items: flex-start;">
+                        <div style="display: flex; align-items: center; margin-bottom: 4px;">
+                            <strong style="min-width: 80px;">Jersey #:</strong>
+                            <span style="color: #e74c3c; font-weight: bold;">1</span>
+                        </div>
                     </div>
-                    <div class="contact-item">
-                        <strong>Class :</strong> 2027
+                    <div class="contact-item" style="flex-direction: column; align-items: flex-start;">
+                        <div style="display: flex; align-items: center; margin-bottom: 4px;">
+                            <strong style="min-width: 80px;">Class:</strong>
+                            <span>2027</span>
+                        </div>
                     </div>
-                    <div class="contact-item">
-                        <strong>GPA :</strong> <span style="color: #27ae60; font-weight: bold;">3.7</span>
+                    <div class="contact-item" style="flex-direction: column; align-items: flex-start;">
+                        <div style="display: flex; align-items: center; margin-bottom: 4px;">
+                            <strong style="min-width: 80px;">GPA:</strong>
+                            <span style="color: #27ae60; font-weight: bold;">3.7</span>
+                        </div>
                     </div>
 
                 </div>
