Update image URLs to use raw.githubusercontent.com with correct username

--- a/soccer-recruiting-email.html
+++ b/soccer-recruiting-email.html
@@ -447,7 +447,7 @@
     <div class="email-container">
         <!-- Header & Introduction -->
         <div class="header">
-            <img src="images/ellis-headshot.jpg" alt="Ellis Toal Headshot" class="headshot">
+            <img src="https://raw.githubusercontent.com/toaler/recruiting-utils/main/images/ellis-headshot.jpg" alt="Ellis Toal Headshot" class="headshot">
                             <div class="header-content">
                     <h1>ELLIS TOAL</h1>
                     <div class="tagline">Class of 2027 Goalkeeper | 3.7 GPA | U17 Mustang ECNL Goalkeeper Norcal | #1</div>
@@ -467,11 +467,11 @@
                         📱 &nbsp;&nbsp;<a href="tel:+19257919490">(925) 791-9490</a>
                     </div>
                     <div class="contact-item">
-                        <img src="images/instagram-logo.png" alt="Instagram Logo" style="width: 20px; height: 20px; margin-right: 8px; vertical-align: middle;">
+                        <img src="https://raw.githubusercontent.com/toaler/recruiting-utils/main/images/instagram-logo.png" alt="Instagram Logo" style="width: 20px; height: 20px; margin-right: 8px; vertical-align: middle;">
                         <a href="https://www.instagram.com/ellis_toal_soccer2027" target="_blank" style="color: white; text-decoration: none;">@ellis_toal_soccer2027</a>
                     </div>
                     <div class="contact-item">
-                        <img src="images/youtube-logo.png" alt="YouTube Logo" style="width: 20px; height: 20px; margin-right: 8px; vertical-align: middle;">
+                        <img src="https://raw.githubusercontent.com/toaler/recruiting-utils/main/images/youtube-logo.png" alt="YouTube Logo" style="width: 20px; height: 20px; margin-right: 8px; vertical-align: middle;">
                         <a href="https://www.youtube.com/@Etoal2009" target="_blank" style="color: white; text-decoration: none;">@Etoal2009</a>
                     </div>
 
@@ -485,15 +485,15 @@
                         <div style="display: flex; align-items: center; margin-bottom: 4px;">
                             <strong style="min-width: 80px;">Club Team:</strong>
                             <a href="https://mustangsoccer.com/" target="_blank" style="color: white; text-decoration: none; margin-right: 8px;">U17 Mustang ECNL</a>
-                            <img src="images/mustang-logo.png" alt="Mustang Soccer Club Logo" style="width: 20px; height: 20px; margin-right: 4px;">
-                            <img src="images/ecnl-logo.png" alt="ECNL Logo" style="width: 20px; height: 20px;">
+                            <img src="https://raw.githubusercontent.com/toaler/recruiting-utils/main/images/mustang-logo.png" alt="Mustang Soccer Club Logo" style="width: 20px; height: 20px; margin-right: 4px;">
+                            <img src="https://raw.githubusercontent.com/toaler/recruiting-utils/main/images/ecnl-logo.png" alt="ECNL Logo" style="width: 20px; height: 20px;">
                         </div>
                     </div>
                     <div class="contact-item" style="flex-direction: column; align-items: flex-start;">
                         <div style="display: flex; align-items: center; margin-bottom: 4px;">
                             <strong style="min-width: 80px;">School Team:</strong>
                             <a href="https://www.dlshs.org/" target="_blank" style="color: white; text-decoration: none; margin-right: 8px;">De La Salle Varsity</a>
-                            <img src="images/dlshs-logo.png" alt="De La Salle Logo" style="width: 20px; height: 20px;">
+                            <img src="https://raw.githubusercontent.com/toaler/recruiting-utils/main/images/dlshs-logo.png" alt="De La Salle Logo" style="width: 20px; height: 20px;">
                         </div>
                     </div>
                     <div class="contact-item" style="flex-direction: column; align-items: flex-start;">
@@ -542,20 +542,20 @@
                     <div style="margin-bottom: 20px;">
                         <strong><a href="https://calbears.com/sports/mens-soccer/roster/coaches/henry-foulk/6215" target="_blank" style="color: #3498db; text-decoration: underline;">Coach Henry Foulk</a></strong><br>
                         <div style="margin: 8px 0 4px 0; font-size: 16px;">
-                            <img src="images/cal-logo.png" alt="Cal Berkeley Logo" style="width: 18px; height: 18px; margin-right: 6px; vertical-align: middle;"> GK Coach - UC Berkeley
+                            <img src="https://raw.githubusercontent.com/toaler/recruiting-utils/main/images/cal-logo.png" alt="Cal Berkeley Logo" style="width: 18px; height: 18px; margin-right: 6px; vertical-align: middle;"> GK Coach - UC Berkeley
                         </div>
                         <div style="margin: 4px 0 8px 0; font-size: 16px;">
-                            <img src="images/mustang-logo.png" alt="Mustang Logo" style="width: 18px; height: 18px; margin-right: 6px; vertical-align: middle;"> Head GK Coach - Mustang Soccer
+                            <img src="https://raw.githubusercontent.com/toaler/recruiting-utils/main/images/mustang-logo.png" alt="Mustang Logo" style="width: 18px; height: 18px; margin-right: 6px; vertical-align: middle;"> Head GK Coach - Mustang Soccer
                         </div>
                         <a href="mailto:henryfca@sbcglobal.net" style="font-size: 16px; color: #3498db;">henryfca@sbcglobal.net</a>
                     </div>
                     <div style="margin-bottom: 20px;">
                         <strong><a href="https://eastbaypioneers.com/sports/mens-soccer/roster/coaches/kevin-esquivel/980" target="_blank" style="color: #3498db; text-decoration: underline;">Coach Kevin Esquivel</a></strong><br>
                         <div style="margin: 8px 0 4px 0; font-size: 16px;">
-                            <img src="images/cseb-logo.png" alt="Cal State East Bay Logo" style="width: 18px; height: 18px; margin-right: 6px; vertical-align: middle;"> GK Coach - Cal State East Bay
+                            <img src="https://raw.githubusercontent.com/toaler/recruiting-utils/main/images/cseb-logo.png" alt="Cal State East Bay Logo" style="width: 18px; height: 18px; margin-right: 6px; vertical-align: middle;"> GK Coach - Cal State East Bay
                         </div>
                         <div style="margin: 4px 0 8px 0; font-size: 16px;">
-                            <img src="images/mustang-logo.png" alt="Mustang Logo" style="width: 18px; height: 18px; margin-right: 6px; vertical-align: middle;"> GK Coach - Mustang Soccer
+                            <img src="https://raw.githubusercontent.com/toaler/recruiting-utils/main/images/mustang-logo.png" alt="Mustang Logo" style="width: 18px; height: 18px; margin-right: 6px; vertical-align: middle;"> GK Coach - Mustang Soccer
                         </div>
                         <a href="mailto:bayareagk@gmail.com" style="font-size: 16px; color: #3498db;">bayareagk@gmail.com</a><br>
                         <a href="tel:+14158163460" style="font-size: 16px; color: #3498db;">(415) 816-3460</a>
@@ -563,7 +563,7 @@
                     <div style="margin-bottom: 20px;">
                         <strong>Coach Joe Owen</strong><br>
                         <div style="margin: 8px 0 4px 0; font-size: 16px;">
-                            <img src="images/mustang-logo.png" alt="Mustang Logo" style="width: 18px; height: 18px; margin-right: 6px; vertical-align: middle;"> Director of Coaching - Mustang Soccer
+                            <img src="https://raw.githubusercontent.com/toaler/recruiting-utils/main/images/mustang-logo.png" alt="Mustang Logo" style="width: 18px; height: 18px; margin-right: 6px; vertical-align: middle;"> Director of Coaching - Mustang Soccer
                         </div>
                         <a href="mailto:jowen@mustangsoccer.com" style="font-size: 16px; color: #3498db;">jowen@mustangsoccer.com</a><br>
                         <a href="tel:+12092047627" style="font-size: 16px; color: #3498db;">(209) 204-7627</a>
@@ -571,7 +571,7 @@
                     <div style="margin-bottom: 20px;">
                         <strong><a href="https://dlsspartans.org/sports/mens-soccer/roster/coaches/derricke-brown/1" target="_blank" style="color: #3498db; text-decoration: underline;">Coach Derricke Brown</a></strong><br>
                         <div style="margin: 8px 0 4px 0; font-size: 16px;">
-                            <img src="images/dlshs-logo.png" alt="De La Salle Logo" style="width: 18px; height: 18px; margin-right: 6px; vertical-align: middle;"> Head Varsity Coach - De La Salle
+                            <img src="https://raw.githubusercontent.com/toaler/recruiting-utils/main/images/dlshs-logo.png" alt="De La Salle Logo" style="width: 18px; height: 18px; margin-right: 6px; vertical-align: middle;"> Head Varsity Coach - De La Salle
                         </div>
                         <a href="mailto:brownd@dlshs.org" style="font-size: 16px; color: #3498db;">brownd@dlshs.org</a><br>
                         <a href="tel:+19252888197" style="font-size: 16px; color: #3498db;">(925) 288-8197</a>
@@ -630,21 +630,21 @@
                     <div class="event-item">
                         <div class="event-date">November 21-23, 2025</div>
                         <div>
-                            <img src="images/ecnl-logo.png" alt="ECNL Logo" style="width: 25px; height: 25px; margin-right: 10px; vertical-align: middle;">
+                            <img src="https://raw.githubusercontent.com/toaler/recruiting-utils/main/images/ecnl-logo.png" alt="ECNL Logo" style="width: 25px; height: 25px; margin-right: 10px; vertical-align: middle;">
                             <strong>ECNL Phoenix</strong> – Phoenix, AZ
                         </div>
                     </div>
                     <div class="event-item">
                         <div class="event-date">April 10-12, 2026</div>
                         <div>
-                            <img src="images/ecnl-logo.png" alt="ECNL Logo" style="width: 25px; height: 25px; margin-right: 10px; vertical-align: middle;">
+                            <img src="https://raw.githubusercontent.com/toaler/recruiting-utils/main/images/ecnl-logo.png" alt="ECNL Logo" style="width: 25px; height: 25px; margin-right: 10px; vertical-align: middle;">
                             <strong>Indianapolis ECNL Event</strong> – Indianapolis, IN
                         </div>
                     </div>
                     <div class="event-item">
                         <div class="event-date">May 24-26, 2026</div>
                         <div>
-                            <img src="images/ca-cup-logo.png" alt="Club America Cup Logo" style="width: 25px; height: 25px; margin-right: 10px; vertical-align: middle;">
+                            <img src="https://raw.githubusercontent.com/toaler/recruiting-utils/main/images/ca-cup-logo.png" alt="Club America Cup Logo" style="width: 25px; height: 25px; margin-right: 10px; vertical-align: middle;">
                             <strong>Club America Cup</strong> – San Diego, CA
                         </div>
                     </div>
