--- a/soccer-recruiting-email-final.html
+++ b/soccer-recruiting-email-final.html
@@ -392,7 +392,13 @@
                                                     Trained with Eture coaching staff and competed against Spain's National Youth League teams (U-19, ages 16-20).
                                                 </p>
                                                 <a href="https://www.youtube.com/watch?v=FgV7lB-YOjk" target="_blank" style="display: inline-block; text-decoration: none; margin-bottom: 15px;">
-                                                    <img src="https://img.youtube.com/vi/FgV7lB-YOjk/maxresdefault.jpg" alt="Summer 2025 Spain Highlights" style="width: 100%; max-width: 500px; height: 225px; object-fit: cover; border-radius: 8px; border: 2px solid #1e3c72;">
+                                                    <table cellpadding="0" cellspacing="0" border="0" style="width: 100%; max-width: 500px; border-radius: 8px; border: 2px solid #1e3c72;">
+                                                        <tr>
+                                                            <td style="text-align: center; padding: 0;">
+                                                                <img src="https://img.youtube.com/vi/FgV7lB-YOjk/maxresdefault.jpg" alt="Summer 2025 Spain Highlights" style="width: 100%; height: 225px; object-fit: cover; display: block;">
+                                                            </td>
+                                                        </tr>
+                                                    </table>
                                                 </a>
                                                 <br>
                                                 <a href="https://www.youtube.com/watch?v=FgV7lB-YOjk" target="_blank" class="video-link">Watch Highlights</a>
