--- a/soccer-recruiting-email-final.html
+++ b/soccer-recruiting-email-final.html
@@ -72,6 +72,8 @@
             width: 107px;
             height: 107px;
             border: 3px solid white;
+            object-fit: cover;
+            object-position: center 60%;
         }
         
         .sidebar {
