feat: add Coach Mike Muniz to references section
- Add Coach Mike Muniz as U17 Head Coach - Mustang Soccer
- Include contact information: vamosmike510@gmail.com, (510) 755-0866
- Maintain consistent formatting with other references
- Complete coaching network for college recruiters

--- a/soccer-recruiting-email-final.html
+++ b/soccer-recruiting-email-final.html
@@ -363,6 +363,14 @@
                                                     <a href="mailto:brownd@dlshs.org" style="font-size: 16px; color: #3498db;">brownd@dlshs.org</a><br>
                                                     <a href="tel:+19252888197" style="font-size: 16px; color: #3498db;">(925) 288-8197</a>
                                                 </div>
+                                                <div style="margin-bottom: 20px;">
+                                                    <strong>Coach Mike Muniz</strong><br>
+                                                    <div style="margin: 8px 0 4px 0; font-size: 16px;">
+                                                        <img src="https://raw.githubusercontent.com/toaler/recruiting-utils/main/images/mustang-logo.png" alt="Mustang Logo" style="width: 18px; height: 18px; margin-right: 6px; vertical-align: middle;"> U17 Head Coach - Mustang Soccer
+                                                    </div>
+                                                    <a href="mailto:vamosmike510@gmail.com" style="font-size: 16px; color: #3498db;">vamosmike510@gmail.com</a><br>
+                                                    <a href="tel:+15107550866" style="font-size: 16px; color: #3498db;">(510) 755-0866</a>
+                                                </div>
                                             </div>
                                         </div>
                                     </td>
@@ -380,7 +388,7 @@
                                         <!-- Recent Updates -->
                                         <div class="main-section">
                                             <p style="margin: 0 0 15px 0; line-height: 1.6;">
-                                                Hi Coach X, Y, Z,
+                                                Hi Coach Abdakka, Segalini,
                                             </p>
                                             <p style="margin: 0 0 15px 0; line-height: 1.6;">
                                                 I hope you and the team are gearing up for a great season. I wanted to share a quick update, my upcoming schedule, and check in about your recruiting needs for the 2027 goalkeeper class.
